--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "start": "npm run serve",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.14",
+    "@iconify/vue": "^4.1.1",
+    "@kyvg/vue3-notification": "^2.9.1",
+    "autoprefixer": "^10.4.14",
     "core-js": "^3.8.3",
+    "leaflet": "^1.9.4",
+    "pinia": "^2.1.3",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-tel-input": "^6.0.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
